--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -526,7 +526,7 @@
  enclave_food_energy_trade_2_xur_desc:0 "$enclave_mineral_trade_1_xur_desc$"
  enclave_food_energy_trade_3_xur:0 "$enclave_mineral_trade_1_xur$"
  enclave_food_energy_trade_3_xur_desc:0 "$enclave_mineral_trade_1_xur_desc$"
- end_trade_1:0 "This will terminate our current resource trade deal with XuraCorp."
+ end_trade_1:0 "สิ่งนี้จะยุติข้อตกลงการค้าทรัพยากรในปัจจุบันกับ XuraCorp"
  enclave_mineral_trade_1_rig:0 "Riggan Trade Deal"
  enclave_mineral_trade_1_rig_desc:0 "This trade deal stipulates a monthly transfer of resources between us and the Riggans.\n\n§YIt can be ended at any time in the Riggan diplomatic menu.§!"
  enclave_mineral_trade_2_rig:0 "$enclave_mineral_trade_1_rig$"
@@ -563,7 +563,7 @@
  enclave_food_energy_trade_2_rig_desc:0 "$enclave_mineral_trade_1_rig_desc$"
  enclave_food_energy_trade_3_rig:0 "$enclave_mineral_trade_1_rig$"
  enclave_food_energy_trade_3_rig_desc:0 "$enclave_mineral_trade_1_rig_desc$"
- end_trade_2:0 "This will terminate our current resource trade deal with the Riggans."
+ end_trade_2:0 "สิ่งนี้จะยุติข้อตกลงการค้าทรัพยากรในปัจจุบันกับ Riggans"
  enclave_mineral_trade_1_mut:0 "Muutagan Trade Deal"
  enclave_mineral_trade_1_mut_desc:0 "This trade deal stipulates a monthly transfer of resources between us and the Muutagans.\n\n§YIt can be ended at any time in the Muutagan diplomatic menu.§!"
  enclave_mineral_trade_2_mut:0 "$enclave_mineral_trade_1_mut$"
@@ -600,7 +600,7 @@
  enclave_food_energy_trade_2_mut_desc:0 "$enclave_mineral_trade_1_mut_desc$"
  enclave_food_energy_trade_3_mut:0 "$enclave_mineral_trade_1_mut$"
  enclave_food_energy_trade_3_mut_desc:0 "$enclave_mineral_trade_1_mut_desc$"
- end_trade_3:0 "This will terminate our current resource trade deal with the Muutagans."
+ end_trade_3:0 "สิ่งนี้จะยุติข้อตกลงการค้าทรัพยากรในปัจจุบันกับ Muutagans"
  leviathans.105.e:1 "เราต้องการที่จะยุติข้อตกลงการค้าทรัพยากรของเรา"
  leviathans.105.e.response:0 "Very well. We shall immediately transmit instructions to our freighters telling them to stand down and return to base.\n\nLet us know if you change your mind!"
  leviathans.171.name:1 "Energy Trade Canceled"
