--- a/mod/thmod/localisation/english/diplo_stances_l_english.yml
+++ b/mod/thmod/localisation/english/diplo_stances_l_english.yml
@@ -45,19 +45,19 @@
  diplo_stance_isolationist_fallen_empire_desc:0 "อาณาจักรนี้ตกอยู่ในยุคมืดเมื่อนานมาแล้วและส่วนใหญ่แยกตัวเองออกจากส่วนที่เหลือของกาแลคซี"
  diplo_stance_ignorant:0 "ไม่รู้"
  diplo_stance_ignorant_name:0 "$diplo_stance_ignorant$"
- diplo_stance_ignorant_desc:1 "This pre-FTL civilization is ignorant of the reality that exists beyond its gravity well."
+ diplo_stance_ignorant_desc:1 "อารยธรรม pre-FTL นี้ไม่รู้ถึงความเป็นจริงที่มีอยู่นอกเหนือแรงโน้มถ่วงของพวกเขา"
  diplo_stance_questioning:0 "ตั้งคำถาม"
  diplo_stance_questioning_name:0 "$diplo_stance_questioning$"
- diplo_stance_questioning_desc:0 "This pre-FTL civilization is beginning to question what might exist beyond their star system."
+ diplo_stance_questioning_desc:0 "อารยธรรม pre-FTL นี้เริ่มตั้งคำถามถึงสิ่งที่อาจเกิดขึ้นนอกเหนือจากระบบดาวฤกษ์ของพวกเขา"
  diplo_stance_eager:0 "กระตือรือร้น"
  diplo_stance_eager_name:0 "$diplo_stance_eager$"
- diplo_stance_eager_desc:0 "This pre-FTL civilization is eager to set out to the stars and meet the rest of the galaxy."
+ diplo_stance_eager_desc:0 "อารยธรรม pre-FTL นี้กระตือรือร้นที่จะออกเดินทางสู่ดวงดาวและพบกับส่วนที่เหลือของกาแล็กซี"
  diplo_stance_fearful:0 "เกรงกลัว"
  diplo_stance_fearful_name:0 "$diplo_stance_fearful$"
- diplo_stance_fearful_desc:0 "This pre-FTL civilization is afraid of the alien dangers that exist in the galaxy."
+ diplo_stance_fearful_desc:0 "อารยธรรม pre-FTL นี้กลัวอันตรายจากเอเลี่ยนที่มีอยู่ในกาแล็กซี"
  diplo_stance_uncertain:0 "ไม่แน่นอน"
  diplo_stance_uncertain_name:0 "$diplo_stance_uncertain$"
- diplo_stance_uncertain_desc:0 "This pre-FTL civilization is uncertain as to how to approach alien societies."
+ diplo_stance_uncertain_desc:0 "อารยธรรม pre-FTL นี้ยังไม่ชัดเจนว่าจะเข้ากับสังคมมนุษย์ต่างดาวได้อย่างไร"
  diplo_stance_culture_shock:0 "$culture_shock_diplomacy$"
  diplo_stance_culture_shock_name:0 "$diplo_stance_culture_shock$"
  diplo_stance_culture_shock_desc:0 "$culture_shock_diplomacy_desc$"
