--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -1170,10 +1170,10 @@
  COMMAND_LIMIT:0 "ขีดจำกัดคำสั่ง"
  COMMAND_LIMIT_VALUE:0 "$COMMAND_LIMIT$ ($CURRENT$/$LIMIT$)"
  LEADER_EFFECTS_OF_SKILL:1 "\n§Eผลของเลเวลสกิล:§!"
- FLEET_IS_WINDING_DOWN:0 "Cannot merge or split fleets that are winding down from FTL."
- FLEET_IS_UPGRADING:0 "Cannot merge or split fleets that are upgrading."
- FLEET_TOO_LARGE:2 "Merging these fleets would create a fleet that is over our $COMMAND_LIMIT$ of $NUM|Y$."
- FLEET_SPLIT_NOT_ENOUGH_SHIPS:0 "Not enough ships to form a new fleet."
+ FLEET_IS_WINDING_DOWN:0 "ไม่สามารถรวมหรือแยกกองยานที่กำลังลดความเร็วจากการเดินทางแบบ FTL ได้"
+ FLEET_IS_UPGRADING:0 "ไม่สามารถรวมหรือแยกกองยานที่กำลังอัปเกรดได้"
+ FLEET_TOO_LARGE:2 "การรวมกองยานเหล่านี้จะสร้างกองยานที่มี$COMMAND_LIMIT$มากกว่าขีดจำกัด (ขีดจำกัด: $NUM|Y$)"
+ FLEET_SPLIT_NOT_ENOUGH_SHIPS:0 "มียานไม่เพียงพอที่จะสร้างกองยานใหม่"
  FLEET_MERGE_DESC:4 "รวมกองยานที่เลือกให้เป็นกองยานที่ใหญ่ขึ้นเท่าที่จะเป็นไปได้ กองยานจะถูกจัดเรียงตามลำดับต่อไปนี้:§Y\n1. ชื่อที่กำหนดขึ้นเอง\n2. สกิลผู้นำ\n3. ขนาดกองยาน§!"
  FLEET_MERGE_NOT_ENOUGH_MILITARY_FLEETS:3 "ต้องมีกองยานทหารอย่างน้อยสองกองที่มียานประเภทเดียวกัน"
  FLEET_MERGE_INVALID_COUNTRY:0 "การรวมไม่ถูกต้อง"
@@ -2443,7 +2443,7 @@
  END_OF_GAME_DEAD_PLAYER:0 "Your Empire has been destroyed! You can choose to continue the game as an observer."
  END_OF_GAME_DEAD_PLAYER_COUNTRY:0 "Your Empire has been taken over by the $REBELS|H$! rebels. You can choose to continue the game as an observer."
  FLEETS_DISBAND_TITLE:1 "ปลดกองยาน?"
- FLEETS_DISBAND_DESC:2 "§Eจะปลดกองยานที่เลือกนี้§!\n\n§Rคำเตือน: การยุบกองยานจะยุบกองยานทั้งหมดที่เป็นส่วนหนึ่งของกองเรือนั้นด้วย§!"
+ FLEETS_DISBAND_DESC:2 "§Eจะปลดกองยานที่เลือกนี้§!\n\n§Rคำเตือน: การยุบกองยานจะยุบกองยานทั้งหมดที่เป็นส่วนหนึ่งของกองยานนั้นด้วย§!"
  FLEETS_BREAK_CONTRACT_TITLE:0 "Break Fleets' contract"
  FLEETS_BREAK_CONTRACT_DESC:0 "Do you wish to break lease contract of these fleets?"
  SPACEPORT_DISBAND_TITLE:0 "รื้อถอนสถานีท่ายานอวกาศ"
@@ -4529,11 +4529,11 @@
  PV_SHIPYARD:0 "อู่ต่อยาน"
  PV_SHIPYARD_LABEL:0 "การก่อสร้างบนวงโคจรดาว"
  NO_POP_GROWING:0 "ประชากรไม่เพิ่ม"
- NO_POP_GROWING_DESC:0 "There is currently no species growing on the planet."
+ NO_POP_GROWING_DESC:0 "ปัจจุบันไม่มีเผ่าพันธุ์ใดที่เพิ่มขึ้นบนดาว"
  NO_POP_DECLINING:0 "ไม่มีประชากรที่ถูกปฏิเสธ"
  NO_POP_DECLINING_DESC:0 "ปัจจุบันไม่มีเผ่าพันธุ์ใดที่ถูกปฏิเสธบนดาว"
  NO_POP_ASSEMBLING:0 "ไม่มีการประกอบประชากรเครื่องจักร"
- NO_POP_ASSEMBLING_DESC:0 "There is currently no species being assembled on the planet."
+ NO_POP_ASSEMBLING_DESC:0 "ปัจจุบันไม่มีเผ่าพันธุ์ใดที่ถูกประกอบขึ้นบนดาว"
  NO_GROWTH_OVERCROWDING:0 "§Rความแออัดยัดเยียดกำลังขัดขวางการเพิ่มของประชากร§!"
  NO_GROWTH_POSSIBLE:0 "£trigger_no£ §Rเปิดการควบคุมจำนวนประชากรเพื่อป้องกันการเพิ่มประชากร§!"
  NO_ASSEMBLY_POSSIBLE:0 "£trigger_no£ §Rเปิดการควบคุมจำนวนประชากรเพื่อป้องกันการประกอบประชากรเครื่องจักร§!"
@@ -4908,12 +4908,12 @@
  ENTIRE_SPECIES_BEING_PURGED:0 "$TRIGGER_FAIL$This entire Species is being purged."
  ALREADY_BEING_PURGED:0 "$TRIGGER_FAIL$This Pop is already being purged."
  ACTION_CANNOT_PURGE_CITIZEN:0 "$TRIGGER_FAIL$Can only selectively Purge enslaved species."
- ACTION_CANNOT_PURGE_POLICY:0 "$TRIGGER_FAIL$Our policies do not allow selective purging."
+ ACTION_CANNOT_PURGE_POLICY:0 "$TRIGGER_FAIL$นโยบายของเราไม่อนุญาตให้มีการกวาดล้างแบบเลือกเฉพาะเจาะจง"
  AI_WILL_BE_OUTLAWED:0 "Artificial Intelligence will be outlawed in §H[Root.GetName]§!."
  PURGE_AND_SLAVES_WILL_BE_OUTLAWED:0 "Purging and Slavery will be outlawed in §H[Root.GetName]§!."
  ENSLAVE_ALL_POPS:0 "จับประชากร $SPECIES|H$ บนดาวเป็นทาสทั้งหมด"
  ENSLAVE_POP:0 "ประชากรเป็นทาส"
- EMANCIPATE_POP:0 "Emancipate this Pop"
+ EMANCIPATE_POP:0 "ปลดปล่อยประชากรนี้"
  EMANCIPATE_ALL_POPS:0 "ปลดปล่อยประชากร $SPECIES|H$ บนดาวทั้งหมด"
  PURGE_ALL_POPS:2 "กวาดล้างทั้งหมดบนดาวดวงนี้"
  PURGE_POP:2 "$POP_ACTION_PURGE$"
@@ -4953,12 +4953,12 @@
  ENSLAVE_REQUIRES_GROWN_POP:0 "ไม่สามารถทำให้ประชากรที่เพิ่มขึ้นให้เป็นทาสได้"
  POP_ACTION_ENSLAVE:0 "เป็นทาส"
  POP_ACTION_ENSLAVE_DESC:2 "§EEnslaves this §HPop§!. Enslaved Pops excel at manual labor but are not useful for more intellectual pursuits. Other Pops are likely to react to the presence of slaves. This action also risks damaging our relations with certain other empires.§!"
- POP_ACTION_EMANCIPATE:0 "Emancipate"
+ POP_ACTION_EMANCIPATE:0 "ปลดปล่อย"
  POP_ACTION_EMANCIPATE_DESC:1 "§EEmancipate this §HPop§!. They will be set free, but their enslavement will not soon be forgotten.§!"
- POP_ACTION_STOP_PURGE:0 "Stop Purge"
+ POP_ACTION_STOP_PURGE:0 "หยุดการกวาดล้าง"
  POP_ACTION_STOP_PURGE_DESC:2 "§EStop the ongoing decimation of this §HPop§!. They will no longer be exterminated, but the suffering they endured will not soon be forgotten.§!"
  POP_ACTION_STOP_PURGE_ROBOT_DESC:1 "§EStop the ongoing disassembly of this §HPop§!.§!"
- POP_ACTION_STOP_PURGE_ALL_POPS:0 "Stop Purge of all $SPECIES|H$ Pops on planet"
+ POP_ACTION_STOP_PURGE_ALL_POPS:0 "หยุดการกวาดล้างประชากร $SPECIES|H$ บนดาว"
  POP_ACTION_CREATE_COLONISTS:0 "สร้างนักล่าอาณานิคม"
  POP_ACTION_CREATE_COLONISTS_DESC:0 "Begin construction of a new Colony Ship filled with colonists from this Pop."
  IS_GENOCIDING_DESC:0 "Being Purged:\nProduction: §H0§!\nResearch: §H0§!"
@@ -5154,11 +5154,11 @@
  WAROVERVIEW_SURRENDER:0 "ยอมแพ้"
  WAROVERVIEW_SURRENDER_DESC:0 "ให้ศัตรูบังคับตามความต้องการของเป้าหมายสงครามทั้งหมดและยึดระบบที่อ้างสิทธิ์ทั้งหมด"
  WAROVERVIEW_SEND_OFFER:0 "ส่งข้อเสนอ"
- WAROVERVIEW_WAR_STATUS_HEADER_1:0 "§RThey have no intent of surrendering.§!"
- WAROVERVIEW_WAR_STATUS_HEADER_2:0 "§RThey will not surrender anytime soon.§!"
- WAROVERVIEW_WAR_STATUS_HEADER_3:0 "§YTheir will to resist our demands is wavering.§!"
- WAROVERVIEW_WAR_STATUS_HEADER_4:0 "§GThey are close to surrendering.§!"
- WAROVERVIEW_WAR_STATUS_HEADER_5:0 "§GThey are ready to surrender.§!"
+ WAROVERVIEW_WAR_STATUS_HEADER_1:0 "§Rพวกเขาไม่ต้องการที่จะยอมจำนน§!"
+ WAROVERVIEW_WAR_STATUS_HEADER_2:0 "§Rพวกเขาจะไม่ยอมจำนนในเร็วๆนี้§!"
+ WAROVERVIEW_WAR_STATUS_HEADER_3:0 "§Yความตั้งใจของพวกเขาที่จะต่อความต้องการของเรากำลังสั่นคลอน§!"
+ WAROVERVIEW_WAR_STATUS_HEADER_4:0 "§Gพวกเขาใกล้จะยอมจำนนแล้ว§!"
+ WAROVERVIEW_WAR_STATUS_HEADER_5:0 "§Gพวกเขาพร้อมที่จะยอมจำนน§!"
  LACKING_INFLUENCE_DEMAND:0 "§RWe are lacking the necessary influence to enact this demand.§!"
  SPACE_BATTLE:0 "การรบในอวกาศ"
  OCCUPATION:0 "การยึดครอง"
@@ -7518,8 +7518,8 @@
  ACTION_BREAK_RESEARCH_AGREEMENT_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ทำลายข้อตกลงการวิจัยกับ §H[Recipient.GetName]§!"
  ACTION_BREAK_GUARANTEE_OFFER_DESC:0 "§H[Actor.GetName]§! is no longer guaranteeing §H[Recipient.GetName]'s§! independence."
  ACTION_REVEAL_PRESENCE_TITLE:0 "เปิดเผยการมีอยู่ของเรา"
- ACTION_REVEAL_PRESENCE_DESC:1 "Reveal our existence to this Pre-FTL Civilization, raising their Awareness to Full. Depending on their current Awareness, they will suffer Stellar Culture Shock for up to 50 years."
- ACTION_CANNOT_INTERFERE_POLICY:0 "$TRIGGER_FAIL$§ROur policies do not allow direct interference with pre-FTL civilizations.§!"
+ ACTION_REVEAL_PRESENCE_DESC:1 "เปิดเผยการดำรงอยู่ของเรากับอารยธรรม Pre-FTL นี้ เพิ่มความตระหนักรู้ของพวกเขาให้เต็มที่ ขึ้นอยู่กับการรับรู้ในปัจจุบันของพวกเขาและพวกเขาจะได้รับความตื่นตระหนกทางวัฒนธรรมต่างดาวนานถึง 50 ปี"
+ ACTION_CANNOT_INTERFERE_POLICY:0 "$TRIGGER_FAIL$§Rนโยบายของเราไม่อนุญาตให้มีการแทรกแซงโดยตรงกับอารยธรรม pre-FTL§!"
  ACTION_CANNOT_LOW_AWARENESS:0 "$TRIGGER_FAIL$§ROur policies only allow us to reveal ourselves to a pre-FTL civilization if their Awareness is High.§!"
  ACTION_REVEAL_PRESENCE_OFFER_DESC:1 "The §H[Actor.GetName]§! realized we have been observing them, and are now establishing communications with us."
  ACTION_SOCIETAL_ENLIGHTENMENT_TITLE:1 "Offer Societal Guidance"
@@ -7534,7 +7534,7 @@
  ACTION_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_DESC:0 "Share our superior technology with this Pre-FTL Civilization, increasing the rate of their technological progress."
  ACTION_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_PROPOSAL_FAILED_ACTOR:0 "The §H[Recipient.GetName]§! declined our offer to share our technology."
  ACTION_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_PROPOSAL_FAILED_RECIPIENT:0 "The proposal from §H[Actor.GetName]§! to share their technology timed out and was auto-declined."
- ACTION_CANNOT_ENLIGHTEN_POLICY:0 "$TRIGGER_FAIL$§ROur policies do not allow open enlightenment of pre-FTL civilizations.§!"
+ ACTION_CANNOT_ENLIGHTEN_POLICY:0 "$TRIGGER_FAIL$§Rนโยบายของเราไม่อนุญาตให้ ให้ความรู้แจ้งอย่างเปิดเผยเกี่ยวกับอารยธรรม pre-FTL§!"
  ACTION_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_OFFER_DESC:1 "The §H[Actor.GetName]§! is asking us to share our superior technology with them."
  ACTION_STOP_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_TITLE:0 "Cease Providing Technology"
  ACTION_STOP_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_DESC:0 "End the program to share our superior technology with this Pre-FTL Civilization."
@@ -10190,7 +10190,7 @@
  POLICY_GROUP_TOOLTIP:1 "§T$GROUP|H$\n$GROUP_DESC$\nนโยบายปัจจุบัน: $OPTION|Y$\n\n§Gคลิกเพื่อดูตัวเลือกของนโยบาย§!§!"
  POLICY_OPTION_TOOLTIP_POP_HAPPINESS:0 "\n$NUM|H$ pops will get $MOD$ happiness from this policy."
  POLICY_SELECT_OPTION:0 "\n§Gคลิกเพื่อเลือกตัวเลือกนโยบาย§!"
- ALL_POPS_EMANCIPATED:0 "§EAll Pops in your empire will be emancipated§!"
+ ALL_POPS_EMANCIPATED:0 "§Eประชากรทั้งหมดในจักรวรรดิของคุณจะได้รับการปลดปล่อย§!"
  ALL_ROBOTS_DISASSEMBLED:0 "§EAll robotic Pops in your empire will be disassembled§!"
  CLICK_POLICY_VIEW:0 "§GClick to see list of possible Empire Edicts.§!"
  policy_pre_sapients:0 "อารยธรรมก่อนเซเปียนส์"
@@ -10326,13 +10326,13 @@
  policy_enlightenment:1 "การให้ความรู้อารยธรรมดึกดำบรรพ์"
  policy_enlightenment_desc:1 "Our technological advances could potentially be shared with more pre-FTL societies, opening up new horizons for them to explore.\n"
  enlightenment_not_allowed:0 "ไม่อนุญาต"
- enlightenment_not_allowed_name:1 "Pre-FTL Enlightenment Prohibited"
+ enlightenment_not_allowed_name:1 "ห้ามการให้ความรู้อารยธรรมดึกดำบรรพ์"
  enlightenment_not_allowed_desc:1 "This society is not ready to grasp the wonders we have discovered. Exposing the truth too quickly can entail enormous risks for everyone involved.\n\n§Eไม่อาจให้ความกระจ่างแก่อารยธรรม Pre-FTL ได้§!\n\n"
  enlightenment_covert_only:0 "ซ่อนเร้น/แอบแฝงเท่านั้น"
- enlightenment_covert_only_name:0 "Covert Pre-FTL Enlightenment Allowed"
+ enlightenment_covert_only_name:0 "แอบให้ความรู้อารยธรรมดึกดำบรรพ์"
  enlightenment_covert_only_desc:0 "Revealing our existence to pre-FTL civilizations would alter the natural course of their development. We should help them, but without revealing our presence.\n\n§Eอาจให้ความกระจ่างแก่อารยธรรม Pre-FTL ผ่านการจารกรรมเพียงเท่านั้น§!\n\n"
  enlightenment_allowed:0 "อนุญาต"
- enlightenment_allowed_name:1 "Pre-FTL Enlightenment Allowed"
+ enlightenment_allowed_name:1 "สามารถให้ความรู้อารยธรรมดึกดำบรรพ์ได้"
  enlightenment_allowed_desc:1 "By sharing our knowledge, we can actively encourage less advanced societies to take their rightful place in the galactic community.\n\n§Eอาจให้ความกระจ่างแก่อารยธรรม Pre-FTL ผ่านการจารกรรมและการทูต§!\n\n"
  policy_migration:0 "การอพยพ"
  policy_migration_desc:0 "Some within our Empire look to the stars and wonder what kind of life they could create for themselves on a new world.\n"
@@ -11713,7 +11713,7 @@
  NEW_COLONY_NAME_9:0 "$NAME$ Novantus"
  NEW_COLONY_NAME_10:0 "$NAME$ Decimus"
  SECTOR_SETTINGS:0 "ตั้งค่าเซ็กเตอร์"
- lost_owned_pop:0 "Owned Pop Emancipated"
+ lost_owned_pop:0 "ประชากรที่เป็นเจ้าของได้รับการปลดปล่อย"
  lost_owned_pop_lesser:0 "$lost_owned_pop$"
  setting_purge:0 "Purge"
  setting_enslave:0 "จับไปเป็นทาส"
@@ -12182,7 +12182,7 @@
  ASSIGN_REPRESENTATIVE_DELAYED: "§EAssign a Representative to $FEDERATION$ to increase its §!§HCohesion§!"
  FEDERATION_ASSIGNED_LEADERS: "ผู้แทนถูกแต่งตั้งในสหพันธ์: $VALUE|2+=$"
  FEDERATION_COUNTRY_REPRESENTATIVE: "	$COUNTRY$: $EFFECT|Y0$"
- MOD_VERSION:0 "Mod v0.72.4, Update 24/04/2024"
+ MOD_VERSION:0 "Mod v0.72.5, Update 02/05/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - n/a \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
