--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -99,9 +99,9 @@
  leviathans.104f.desc:0 "The word "discount" is considered a profanity among my people. Please keep this in mind when engaging in conversation with us."
  leviathans.105.c:1 "เรามีความสนใจใน §Yทรัพยากรเชิงยุทธศาสตร์§!"
  trader_tt_strategicresource:0 "ซื้อ §Yทรัพยากรเชิงยุทธศาสตร์§! รายเดือน"
- leviathans.105.c.sr1:0 "We already have a §YRiggan Trade Deal§!\n"
- leviathans.105.c.sr2:0 "We already have a §YXuraCorp Trade Deal§!\n"
- leviathans.105.c.sr3:0 "We already have a §YMuutagan Trade Deal§!\n"
+ leviathans.105.c.sr1:0 "เรามีข้อตกลงการค้ากับ §YRiggan§! อยู่แล้ว\n"
+ leviathans.105.c.sr2:0 "เรามีข้อตกลงการค้ากับ §YXuraCorp§! อยู่แล้ว\n"
+ leviathans.105.c.sr3:0 "เรามีข้อตกลงการค้ากับ §YMuutagan§! อยู่แล้ว\n"
  leviathans.105.c.trust:0 "ต้องการ §YTrader Enclave§! ให้มี:\n£opinion£ ทัศนคติ +50\n"
  leviathans.105.d:0 "ไม่มีอะไรในตอนนี้ ลาก่อน"
  leviathans.105.z:1 "เราต้องการว่าจ้าง §Yที่ปรึกษา§!"
