--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -145,8 +145,8 @@
  CANNOT_DISABLE_BUILDING_NOT_VALID:0 "§RInvalid Building§!"
  CANNOT_DISABLE_BUILDING_WRONG_TYPE:0 "§Rไม่สามารถปิดการใช้งานสิ่งปลูกสร้างประเภทนี้ได้§!"
  CANNOT_CHANGE_BUILDING_PRIO_COUNTRY:0 "§RBuilding belongs to another country§!"
- CANNOT_CHANGE_BUILDING_PRIO_TOP:1 "§RAlready has the highest priority§!"
- CANNOT_CHANGE_BUILDING_PRIO_BOTTOM:1 "§RAlready has the lowest priority§!"
+ CANNOT_CHANGE_BUILDING_PRIO_TOP:1 "§Rมีลำดับความสำคัญสูงสุดอยู่แล้ว§!"
+ CANNOT_CHANGE_BUILDING_PRIO_BOTTOM:1 "§Rมีลำดับความสำคัญต่ำสุดอยู่แล้ว§!"
  CANNOT_CHANGE_BUILDING_PRIO_NOT_OURS:0 "§RWe do not control this build queue§!"
  CLICK_TO_SET_FORCED_GROWTH:0 "§Gคลิกเพื่อเลือกเผ่าพันธุ์ที่จัดลำดับความสำคัญบนดาวนี้§!"
  NO_SPECIES_FOR_GROWTH:0 "§RThere are no species that can grow on this planet.§!"
@@ -284,7 +284,7 @@
  MIGRATION_SENDING_GROWTH:0 "สามารถส่งผู้อพยพจากดาวเคราะห์ต่อไปนี้: §H$LIST$§!"
  MIGRATION_RECEIVING_GROWTH:0 "สามารถรับผู้อพยพจากดาวเคราะห์ต่อไปนี้: §H$LIST$§!"
  MIGRATION_LIST_OVERFLOW:0 " and $NUM|Y$ more"
- PLANET_NO_MIGRATION:0 "There is currently no Migration on this planet."
+ PLANET_NO_MIGRATION:0 "ขณะนี้ไม่มีการอพยพบนดาวดวงนี้"
  HOUSING_EFFECTS:0 "§Hผลจาก$HOUSING$§!"
  DISABLED_JOB:0 "อาชีพถูกปิดไม่ให้ทำ"
  DISABLED_JOB_DESC:0 "อาชีพ $JOB|Y$ นี้ §Rถูกปิด§! และประชากรไม่สามารถทำงานได้ เพิ่มลำดับความสำคัญของอาชีพ เพื่อเปิดใช้งานอีกครั้ง"
@@ -3503,9 +3503,9 @@
  cara.4000.a.tooltip:0 "§R1§! £pop£ §HPops§! depart §Y[pops_join_caravan_planet.GetName]§!"
  cara.4010.name:0 "§HCaravaneers§!: Local Franchise"
  cara.4010.desc:0 "An urgent missive from [caravan_pops_join_planet.GetName] explains that a number of now-former members of the [caravan_pops_join_country.GetName] seek political asylum on the planet. The local administration has seen fit to pass the decision of what to do with them up the chain of command."
- cara.4010.a:0 "All may contribute to the [Root.GetName]."
- cara.4010.a.tooltip:2 "§G3§! §Y[caravan_pops_join_country.GetSpeciesName]§! £pop£ §HPops§! join the colony on [caravan_pops_join_planet.GetName]"
- cara.4010.b:0 "Turn them away."
+ cara.4010.a:0 "ทั้งหมดอาจช่วยสนับสนุน [Root.GetName]"
+ cara.4010.a.tooltip:2 "§G3§! £pop£ §Hประชากร§! ชาว §Y[caravan_pops_join_country.GetSpeciesName]§! เข้าร่วมอาณานิคมบนดาว [caravan_pops_join_planet.GetName]"
+ cara.4010.b:0 "ให้พวกเขาออกไป"
  cara.4020.name:0 "§H$caravaneers$§!: Old with Defects"
  cara.4020.desc:2 "Our starbase in the [caravan_hulk_system.GetName] system reports that the [caravan_hulk_country.GetName] fleet has evacuated and abandoned a decrepit ship, now in unstable orbit around the system's central star."
  cara.4020.a:0 "One man's trash..."
@@ -4271,9 +4271,9 @@
  alert_cannot_afford_monthly_trade_title:1 "ราคาซื้อขายรายเดือนสูง/ต่ำเกินไป"
  alert_cannot_afford_monthly_trade_instant:1 "การซื้อขายรายเดือนของเราอย่างน้อยหนึ่งรายการมีราคาที่ไม่ตรงกับราคาต่ำสุด/สูงสุดที่เราอนุญาต พิจารณาอัปเดตราคา"
  alert_cannot_afford_monthly_trade_delayed:0 "§Gคลิกเพื่อเปิดหน้าต่างตลาด§!"
- riggan_deal_in_place:0 "We already have a §YRiggan Deal§!."
- xuracorp_deal_in_place:0 "We already have a §YXuran Deal§!."
- muutagan_deal_in_place:0 "We already have a §YMuutagan Deal§!."
+ riggan_deal_in_place:0 "เรามีข้อตกลงกับ §YRiggan§! อยู่แล้ว"
+ xuracorp_deal_in_place:0 "เรามีข้อตกลงกับ §YXuran§! อยู่แล้ว"
+ muutagan_deal_in_place:0 "เรามีข้อตกลงกับ §YMuutagan§! อยู่แล้ว"
  SPECIES_RIGHTS_PRESAPIENT:0 "§YSpecies Rights§! are disabled for Pre-sapient Species"
  SPECIES_RIGHTS_NO_POPS:0 "§YSpecies Rights§! cannot be set for species templates without any pops"
  living_standard_chemical_bliss_happiness_tooltip:2 "เพิ่ม £happiness£ ความสุขของประชากร §G40%§! เว้นแต่จะมีการขาดดุลของ £consumer_goods£ §Yสินค้าอุปโภคบริโภค§!"
