--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -182,7 +182,7 @@
  MESSAGE_FORM_MIGRATION_PACT_TITLE:0 "ข้อเสนอสนธิสัญญาการย้ายถิ่น"
  MESSAGE_BREAK_MIGRATION_PACT_TITLE:0 "ข้อเสนอสนธิสัญญาการย้ายถิ่นถูกทำลาย"
  MESSAGE_GUARANTEE_INDEPENDENCE_TITLE:0 "รับรองเอกราช"
- MESSAGE_BREAK_GUARANTEE_TITLE:0 "การรับประกันถูกเพิกถอน"
+ MESSAGE_BREAK_GUARANTEE_TITLE:0 "การรับรองเอกราชถูกเพิกถอน"
  MESSAGE_SUPPORT_INDEPENDENCE_TITLE:0 "อิสรภาพได้รับการสนับสนุน"
  MESSAGE_BREAK_SUPPORT_TITLE:0 "การสนับสนุนถูกยกเลิก"
  MESSAGE_OPEN_BORDERS_TITLE:0 "เปิดพรมแดนแล้ว"
@@ -227,7 +227,7 @@
  ACTION_FORM_MIGRATION_PACT_NOTIFICATION:1 "§H[From.GetName]§! ทำสนธิสัญญาการย้ายถิ่นฐานกับ §H[Root.GetName]§!\n\nตอนนี้ประชากรของพวกเขาสามารถเคลื่อนย้ายได้อย่างอิสระระหว่างสองจักรวรรดิ"
  ACTION_BREAK_MIGRATION_PACT_NOTIFICATION:1 "§H[From.GetName]§! ยกเลิกสนธิสัญญาการย้ายถิ่นฐานที่ทำกับ §H[Root.GetName]§!\n\nดูเหมือนว่าพวกเขาจะเสียดายกับการเปิดเขตแดนต่อกัน"
  ACTION_GUARANTEE_INDEPENDENCE_NOTIFICATION:1 "§H[From.GetName]§! ตอนนี้จะรับประกันความเป็นอิสระของ §H[Root.GetName]§!\n\nตอนนี้พวกเขาจะปกป้องอีกฝ่ายจากการโจมตีทั้งหมด"
- ACTION_BREAK_GUARANTEE_NOTIFICATION:1 "§H[From.GetName]§! หยุดรับประรองความเป็นอิสระของ §H[Root.GetName]§!\n\nนี่อาจเป็นโอกาสสำหรับเรา..."
+ ACTION_BREAK_GUARANTEE_NOTIFICATION:1 "§H[From.GetName]§! หยุดรับรองเอกราชของ §H[Root.GetName]§!\n\nนี่อาจเป็นโอกาสสำหรับเรา..."
  ACTION_SUPPORT_INDEPENDENCE_NOTIFICATION:1 "§H[From.GetName]§! จะสนับสนุนความเป็นอิสระของ §H[Root.GetName]§!\n\nเจ้าเหนือหัวของพวกเขาคงไม่พอใจ..."
  ACTION_BREAK_SUPPORT_NOTIFICATION:1 "§H[From.GetName]§! stopped supporting the independence of §H[Root.GetName]§!.\n\nIt seems [Root.GetName] is destined to remain a subject."
  ACTION_OPEN_BORDERS_NOTIFICATION:1 "§H[From.GetName]§! opened their borders to the fleets of §H[Root.GetName]§!.\n\nThis will improve their diplomatic relations."
