--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -567,7 +567,7 @@
  POP_FACTION_MALCONTENT_SLAVES_DEMAND_DESC_1:0 "$POP_FACTION_SLAVE_DEMAND_DESC_1$"
  POP_FACTION_SLAVE_DEMAND_TITLE_1:1 "Emancipation"
  POP_FACTION_SLAVE_DEMAND_DESC_1:1 "The Pops in this faction have only a single demand; to be free."
- FACTION_ACTION_SLAVE_EMANCIPATE_ALL:0 "Emancipate Slaves"
+ FACTION_ACTION_SLAVE_EMANCIPATE_ALL:0 "ปลดปล่อยทาส"
  FACTION_ACTION_SLAVE_EMANCIPATE_ALL_DESC:1 "Emancipate every enslaved Pop."
  FACTION_ACTION_MALCONTENT_SLAVES_INTERSTELLAR_RAILROAD_TOOLTIP_1:0 "There are at least §R4§! Pops in the faction."
  FACTION_ACTION_MALCONTENT_SLAVES_INTERSTELLAR_RAILROAD_TOOLTIP_2:1 "There are at least §R6§! Pops in the faction."
