--- a/mod/thmod/localisation/english/new_scripted_loc_l_english.yml
+++ b/mod/thmod/localisation/english/new_scripted_loc_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
- ENGLOC_is:0 "is"
- ENGLOC_are:0 "are"
+ ENGLOC_is:0 "คือ"
+ ENGLOC_are:0 "คือ"
  ENGLOC_Is:0 "Is"
  ENGLOC_Are:0 "Are"
- ENGLOC_has:0 "has"
- ENGLOC_have:0 "have"
- ENGLOC_does:0 "does"
- ENGLOC_do:0 "do"
+ ENGLOC_has:0 "มี"
+ ENGLOC_have:0 "มี"
+ ENGLOC_does:0 "ทำ"
+ ENGLOC_do:0 "ทำ"
  ENGLOC_was:0 "was"
  ENGLOC_were:0 "were"
  ENGLOC_f:0 "f"
