--- a/mod/thmod/localisation/english/utopia_ascension_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_ascension_l_english.yml
@@ -60,7 +60,7 @@
  utopia.2602.c:0 "Their sorcery will not be enough to save them."
  utopia.2602.d:0 "Yes... yes, we can sense their psychic emanations."
  utopia.2605.name:0 "[psionic_leader.GetTitle] เปิดเผยว่ามีญาณทิพย์"
- utopia.2605.desc:0 "แม้ว่าจะเป็นเรื่องยากที่พลังจิตจะแสดงออกมาหลังวัยรุ่น แต่ก็ไม่เคยได้ยินมาก่อน [psionic_leader.GetTitle] [psionic_leader.GetName] เพิ่งแสดงความสามารถที่สงสัยว่าพลังจิตโดยธรรมชาติ หลังจากผ่านการทดสอบ ESP อย่างละเอียดแล้ว [psionic_leader.GetSheHe] [psionic_leader.GetHasHave] ถูกระบุว่ามีพรสวรรค์พลังจิตระดับ 4"
+ utopia.2605.desc:0 "แม้ว่าจะเป็นเรื่องยากที่พลังจิตจะแสดงออกมาหลังวัยรุ่น แต่ก็ไม่เคยได้ยินมาก่อน [psionic_leader.GetTitle] [psionic_leader.GetName] เพิ่งแสดงความสามารถที่สงสัยว่าพลังจิตโดยธรรมชาติ หลังจากผ่านการทดสอบ ESP อย่างละเอียดแล้ว[psionic_leader.GetSheHe]ถูกระบุว่า[psionic_leader.GetHasHave]พรสวรรค์พลังจิตระดับ 4"
  utopia.2605.a:0 "ความสามารถใหม่เหล่านี้จะรับใช้เราได้เป็นอย่างดี"
  utopia.2652.name:0 "[From.GetSpeciesNamePlural] Awaken Psionic Abilities"
  utopia.2652.desc:0 "All [From.GetSpeciesNamePlural] throughout the galaxy have undergone a great change. Whereas before their latent psionic power had only blossomed in a small minority, the entire species has now unlocked its full psychic potential.\n\nAlthough these changes seem to have originated in the [From.GetName], they have now manifested in all members of their species regardless of where they reside. Aside from displaying an array of powerful psionic abilities, [From.GetSpeciesNamePlural] have started to forgo verbal communication with each other in favor of telepathy."
